Fix text overflow in post title

--- a/src/components/BasePost/BasePost.scss
+++ b/src/components/BasePost/BasePost.scss
@@ -16,6 +16,7 @@
     line-height: 1.4;
     font-size: 20px;
     font-weight: 500;
+    word-wrap: break-word;
   }
 
   &__footer {
